# spamclassifier

./: Cargo.toml
resources/: cache.json  demo.txt  model.json  testHam.txt  testSpam.txt
src/: bayesian_spam_classifier.rs  cache.rs  console.rs  lib.rs  utills.rs
tests/: bayesian_spam_classifier_test.rs
