[package]
name = "spamclassifier"
version = "0.1.0"
authors = ["IvanIvanov <ivan.ivanov05@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "2.33.3" }
sha2 = {version = "0.9.3"}
rayon = "1.5"

[[bin]]
name = "spam-classifier"
path = "src/console.rs"